components/observability-deprecated/manifests/deepflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deepflow-ingress
  namespace: deepflow
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - deepflow.dnor.io
      secretName: deepflow-tls
  rules:
    - host: deepflow.dnor.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deepflow-app
                port:
                  number: 20418
